[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/sprites/lumotIdle.png" type="Texture" id=1]
[ext_resource path="res://images/sprites/mageIdle.png" type="Texture" id=2]
[ext_resource path="res://scripts/Monster.gd" type="Script" id=3]
[ext_resource path="res://actors/MobHurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/MobDetectZone.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "MageAnim",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "LumotAnim",
"speed": 8.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "hurtAnim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.768627, 0.278431, 0.278431, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Monster" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -1 )
frames = SubResource( 10 )
animation = "MageAnim"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurtAnim = SubResource( 11 )

[node name="MobHurtBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 2, 0 )

[node name="MobDetectZone" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="area_entered" from="MobHurtBox" to="." method="_on_MobHurtBox_area_entered"]
[connection signal="body_entered" from="MobHurtBox" to="." method="_on_MobHurtBox_body_entered"]
